[package]
name = "tcpreno"
authors = ["margual56@gmail.com"]
version = "1.0.2"
license = "GPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] }
eframe = { version = "0.23.0", features = ["wgpu"] }
egui_extras = { version = "0.23.0", features = ["image", "svg"] }
egui_plot = "0.23.0"
plotly = "^0.8"
